@@ -140,28 +140,54 @@ fi
 
 # launch gpg-agent or ssh-agent if enabled.
 ssh_agent_enabled=`xfconf-query -c xfce4-session -p /startup/ssh-agent/enabled`
-if test -z "$SSH_AGENT_PID" -a "$ssh_agent_enabled" != "false"; then
+if test "$ssh_agent_enabled" != "false"; then
+    # if the user has pam_ssh installed, it will start ssh-agent for us, but
+    # of course won't start gpg-agent.  so, if ssh-agent is already running,
+    # but we want gpg-agent (and that's not running yet) start gpg-agent
+    # without ssh support
+
     ssh_agent_type=`xfconf-query -c xfce4-session -p /startup/ssh-agent/type`
+    if test -z "$ssh_agent_type"; then
+        if type gpg-agent >/dev/null 2>&1; then
+            ssh_agent_type=gpg-agent
+        else
+            ssh_agent_type=ssh-agent
+        fi
+    fi
+
+    # ignore stale ssh-agents
+    if test "$SSH_AGENT_PID"; then
+        if ! kill -0 $SSH_AGENT_PID; then
+            unset SSH_AGENT_PID
+            unset SSH_AUTH_SOCK
+        fi
+    fi
 
     case "$ssh_agent_type" in
         gpg-agent)
-            eval `gpg-agent --daemon --enable-ssh-support`
-            ssh_agent_kill_cmd="kill -INT $SSH_AGENT_PID"
+            if test -z "$SSH_AGENT_PID"; then
+                eval `gpg-agent --daemon --enable-ssh-support --write-env-file $XDG_CACHE_HOME/gpg-agent-info`
+                ssh_agent_kill_cmd="kill -INT $SSH_AGENT_PID; rm -f $XDG_CACHE_HOME/gpg-agent-info"
+            elif test -z "$GPG_AGENT_INFO"; then
+                echo "ssh-agent is already running; starting gpg-agent without ssh support"
+                eval `gpg-agent --daemon --write-env-file $XDG_CACHE_HOME/gpg-agent-info`
+                ssh_agent_kill_cmd="pkill -INT ^gpg-agent\$; rm -f $XDG_CACHE_HOME/gpg-agent-info"
+            else
+                echo "gpg-agent is already running"
+            fi
             ;;
 
         ssh-agent)
-            eval `ssh-agent -s`
-            ssh_agent_kill_cmd="ssh-agent -k"
+            if test -z "$SSH_AGENT_PID"; then
+                eval `ssh-agent -s`
+                ssh_agent_kill_cmd="ssh-agent -k"
+            else
+                echo "ssh-agent is already running"
+            fi
             ;;
 
         *)
-            if type gpg-agent >/dev/null 2>&1; then
-                eval `gpg-agent --daemon --enable-ssh-support`
-                ssh_agent_kill_cmd="kill -INT $SSH_AGENT_PID"
-            elif type ssh-agent >/dev/null 2>&1; then
-                eval `ssh-agent -s`
-                ssh_agent_kill_cmd="ssh-agent -k"
-            fi
+            echo "Unrecognized agent type '$ssh_agent_type'" >&2
             ;;
     esac
 fi
@@ -172,7 +198,8 @@ if type xfce4-session >/dev/null 2>&1; then
     xfce4-session
 
     if test "$ssh_agent_kill_cmd"; then
-        $ssh_agent_kill_cmd
+        echo "running '$ssh_agent_kill_cmd'"
+        eval "$ssh_agent_kill_cmd"
     fi
 
     exit 0
@@ -261,7 +288,7 @@ EOF
 esac
 
 if test "$ssh_agent_kill_cmd"; then
-	$ssh_agent_kill_cmd
+	eval "$ssh_agent_kill_cmd"
 fi
 
 xsetroot -bg white -fg red  -solid black -cursor_name watch
